--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.2.*",
+        "facebook/graph-sdk" : "~5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
